fixed scrolling issue (white space) and made posts background fixed

--- a/src/styles/Admin/AdminHomePage.css
+++ b/src/styles/Admin/AdminHomePage.css
@@ -50,4 +50,5 @@ h4, h5 {
   background-color: black;
   position: fixed;
   z-index: -5;
+  overflow: auto;
 }
