--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,8 +1,8 @@
+body, html {
+  height: 100%;
+}
+
 .home {
-  background-image: url("../assets/fdb21c0e4f3dbb6ccd9a63c68fce8645.gif");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   min-height: 100vh;
   height: 200vh;
   width: 100vw;
@@ -13,6 +13,22 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   z-index: -40;
   position: absolute;
+  overflow: auto;
+}
+
+#home-background {
+  margin-top: 0;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-image: url("../assets/fdb21c0e4f3dbb6ccd9a63c68fce8645.gif");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;
+  z-index: -5;
+  overflow: auto;
 }
 
 .home-title {
