--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -12,7 +12,10 @@ nav {
     height: 50px;
     align-items: center;
     background-color: black;
-    
+    top:0;
+    position: fixed;
+    width: 100%;
+    z-index: 50;
 }
 .logos {
     float: left;
