--- a/src/styles/Posts.css
+++ b/src/styles/Posts.css
@@ -18,12 +18,23 @@
 }
 
 .posts-page {
-    background-image: url('../assets/wallpaperflare.com_wallpaper.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    margin-top: 40px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+#posts-page-background {
+    margin-top: 0;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-image: url('../assets/wallpaperflare.com_wallpaper.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: scroll;
+    position: fixed;
+    z-index: -5;
+    overflow: auto;
 }
